--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -7,7 +7,7 @@
   left: 0;
   z-index: 5;
   border-bottom: 1px solid variables.$cod-grey;
-  width: 100vw;
+  width: 100%;
 }
 
 .nav {
