--- a/styles/Portfolio.module.scss
+++ b/styles/Portfolio.module.scss
@@ -1,9 +1,8 @@
 @use "variables";
 
 .row {
+  margin: 6rem auto;
   row-gap: 2rem;
-  margin: 0;
-  padding: 6rem 6rem;
 }
 
 .card {
